# shakespeare-generator

./: .gitignore  Cargo.toml  README.md  sonnets.csv
src/: data.rs  main.rs
