[package]
name = "gen_shake"
version = "22.5.16"
edition = "2021"

[dependencies]
clap = { version = "3.1.5", features = [ "cargo" ] }
csv = "1.1.6"
serde = { version = "1.0", features = [ "derive" ] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "full" ] }
scratch_genetic = "22.5.16"
